<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  "&#8230;" is unicode for "..." -->
    <string name="app_name">Carbs</string>
    <string name="no_items">No items found</string>
    <string name="search_text_hint">Search</string>
    <string name="my_foods">My foods</string>
    <string name="clear_recent_foods">Clear recent&#8230;</string>
    <string name="clear_recent_foods_do_clear">Clear recent</string>
    <string name="clear_recent_foods_question">Clear recent?</string>
    <string name="clear_meal">Clear meal&#8230;</string>
    <string name="clear_meal_do_clear">Clear meal</string>
    <string name="clear_meal_question">Clear meal?</string>
    <string name="clear_my_foods">Clear my foods&#8230;</string>
    <string name="clear_my_foods_do_clear">Clear my foods</string>
    <string name="clear_my_foods_question">Clear my foods?</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
    <string name="add_my_food">Add</string>
    <string name="language_english">EN</string>
    <string name="language_dutch">NL</string>
    <string name="language_option_english">English</string>
    <string name="language_option_dutch">Nederlands</string>
    <string name="title_activity_food_details">Food details</string>
    <string name="title_activity_food_details_edit">Edit food details</string>
    <string name="food_details_quantity">Quantity:</string>
    <string name="food_details_carbs">Carbs:</string>
    <string name="unit_grams">g</string>
    <string name="unit_ml">ml</string>
    <string name="unit_pc">pc</string>
    <string name="add_to_meal">Add to meal</string>
    <string name="save_food_details">Save</string>
    <string name="title_foods">Foods</string>
    <string name="title_recent_foods">Recent</string>
    <string name="title_meal">Meal</string>
    <string name="recent_foods_no_items">No items</string>
    <string name="meal_no_items">No items</string>
    <string name="delete_item_from_meal_confirmation">Are you sure you want to delete this item from the meal?</string>
    <string name="delete_item_from_recent_foods_confirmation">Are you sure you want to delete this item from the history?</string>
    <string name="delete_item_from_my_foods">Are you sure you want to delete this item from the My Foods list? It will also be deleted from the Recent and Meal lists.</string>
    <string name="delete_selected_items">Are you sure you want to delete the selected items?</string>
    <string name="delete_selected_items_from_my_foods">Are you sure you want to delete the selected items? They will also be deleted from the Recent and Meal lists.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="my_food_name_label">Name:</string>
    <string name="my_food_quantity_per_unit">Quantity per unit:</string>
    <string name="my_food_carbs_per_unit">Carbs per unit:</string>
    <string name="my_foods_add">Add food</string>
    <string name="my_food_name_exists_error">Name already exists</string>
    <string name="my_food_enter_a_number">Enter a number</string>
    <string name="title_activity_my_foods">Carbs My foods</string>
    <string name="title_activity_my_food_details">Add my food</string>
    <string name="title_activity_my_food_edit">Edit my food</string>
    <string name="clear_recent_foods_confirmation">Are you sure you want to clear all items in the recent foods history?</string>
    <string name="clear_meal_confirmation">Are you sure you want to clear all items in the meal?</string>
    <string name="clear_my_foods_confirmation">Are you sure you want to clear all items in My Foods? These items will also be deleted from the Recent and Meal lists.</string>
    <string name="export_my_foods">Export my foods&#8230;</string>
    <string name="copy_meal_total">Copy total carbs</string>
    <string name="meal_total_copied_to_clipboard">Total carbs value (%1$s) copied to clipboard.</string>
    <string name="food_deleted_from_meal">Food deleted from meal.</string>
    <string name="food_deleted_from_recent">Food deleted from history.</string>
    <string name="food_deleted_from_my_foods">Food deleted from My Foods.</string>
    <string name="items_deleted">Items deleted.</string>
    <string name="selected">selected.</string>
    <string name="my_foods_import_menu">Import my foods from clipboard&#8230;</string>
    <string name="my_foods_import_title">Import My Foods?</string>
    <string name="my_foods_import_message">Are you sure you want to add the following items into your My Foods list? No items will be deleted from your current list.\n\n%1$s</string>
    <string name="my_foods_import_do_import">Import my foods</string>
    <string name="my_foods_import_invalid_format">Invalid data format, no items imported.</string>
    <string name="my_foods_import_no_data_to_import">There is no available clipboard data to import.</string>
    <string name="my_foods_import_finished">%1$d items imported.</string>
    <string name="delete_meal_items">Delete meal items&#8230;</string>
    <string name="delete_recent_items">Delete recent items&#8230;</string>
    <string name="delete_my_food_items">Delete my foods&#8230;</string>
    <string name="search_all_foods">All</string>
    <string name="search_my_foods">My foods</string>
    <string name="select_items_to_delete">Select items to delete</string>   
    <string name="about_version_label">Version</string> 
    <string name="about_info">
    Food data: NEVO-online version 2013/4.0, RIVM, Bilthoven\n
    \nhttps://github.com/rtaneza/Carbs\n
    \nronald.taneza@gmail.com</string>
    <string name="title_activity_help">Help</string>
    <string name="menu_help">Help</string>    
    
    <string name="main_help_text">
    Carbs shows carbohydrate information of various foods.
    2000+ food items are available in the default food database. You can also add, import, and export your own food data.
    I wrote this app because I have Type 1 Diabetes and constantly need to count how much carbohydrates I eat.\n

    \nThe default food data is taken from NEVO-online version 2013/4.0, RIVM, Bilthoven.
    This is the Nederlands Voedingsstoffenbestand (NEVO), the Dutch Food Composition Database.
    It is managed by the Rijksinstituut voor Volksgezondheid en Milieu (RIVM),
    the Dutch National Institute for Public Health and the Environment.\n      
    
    \nClick \"EN\" (English) or \"NL\" (Nederlands) to toggle how food names from the NEVO database are shown.\n

    \nClick \"My Foods\" on the action bar to add and manage your own food data.\n
    
    \nThe Foods tab shows the list of food items. You can search for food by name, either from all food data (default and My Foods)
    or only from your own food data (My Foods). Click on a food item from the search results to show the Food Details.\n
    
    \nThe Food Details screen shows the food\'s carbohydrate information. 
    Enter the food\'s quantity and the amount of carbohydrates will then be automatically calculated.
    Click the \"Add to meal\" button to add the food to the Meal tab.\n
    
    \nThe Recent tab shows the list of recently added foods. Click on any item on the Recent tab to show the Food Details.\n
       
    \nThe Meal tab shows the list of foods you have added and the total amount of carbohydrates.
    Click on any item on the Meal tab to edit the food\'s quantity.\n
    
    \nClick \"Delete meal items...\" to select and delete meal items.
    \nClick \"Clear meal...\" to delete all meal items.
    \nClick \"Delete recent items...\" to select and delete items from the recent history.
    \nClick \"Clear recent...\" to delete all items from the recent history.
    </string>
    
    <string name="my_foods_help_text">
    You can add and manage your own foods in \"My Foods\".\n
    
    \nClick the \"Add\" icon to add a new food. 
    In the Add my food screen, enter the food details and click the \"Add food\" button to add the food.\n
        
    \nClick \"Delete my foods...\" to select and delete items.
    \nClick \"Clear my foods...\" to delete all items.\n
    
    \nThis app supports a basic mechanism for importing and exporting your list of foods.\n
    
    \nClick \"Export my foods...\" to export your list of foods to another location or application, e.g. clipboard, e-mail, notepad.
    You can then copy or store this list for future import.\n
    
    \nTo import a list of foods, first copy the previously exported list to the clipboard.
    \nThen click \"Import my foods from clipboard...\" to import the list into the Carbs MyFoods database.\n
    </string>
    
    <string-array name="quantity_unit_text_array">
        <item>@string/unit_grams</item>
        <item>@string/unit_ml</item>
        <item>@string/unit_pc</item>
    </string-array>
    
    <string-array name="search_options_array">
        <item>@string/search_all_foods</item>
        <item>@string/search_my_foods</item>
    </string-array>
</resources>