<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:carbs="http://schemas.android.com/apk/res-auto">
      
    <!--
    When using the support library v7, the "showAsAction" attribute
    should use our app's namespace.
    See: http://developer.android.com/guide/topics/ui/actionbar.html#ActionItems
     -->

    <item
        android:id="@+id/menu_add_my_food"
        carbs:showAsAction="always|withText"
        android:icon="@drawable/ic_new"
        android:title="@string/add_my_food"/>
           
    <item
        android:id="@+id/menu_delete_my_food_items"
        carbs:showAsAction="never"
        android:title="@string/delete_my_food_items"/>
        
    <item
        android:id="@+id/menu_clear_my_foods"
        carbs:showAsAction="never"
        android:title="@string/clear_my_foods"/>
 
    <item
        android:id="@+id/menu_export_my_foods"
        carbs:showAsAction="never"
        android:title="@string/export_my_foods"/>
    
    <item
        android:id="@+id/menu_import_my_foods"
        carbs:showAsAction="never"
        android:title="@string/my_foods_import_menu"/>
    
    <item
        android:id="@+id/menu_help"
        carbs:showAsAction="never"
        android:title="@string/menu_help"/>
        
</menu>